<?xml version="1.0" encoding="utf-8"?>
<!-- 2019-02-01 K.OHWADA -->
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false">

    <jp.ohwada.android.camera213.ui.CameraSourcePreview
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_control_height"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@color/control_background">

        <Button
            android:id="@+id/Button_flip"
            android:text="@string/button_flip" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Button_setting"
            android:text="@string/button_setting" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Button
            android:id="@+id/Button_video"
            android:text="@string/record_video" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
            android:layout_weight="1" />

    </LinearLayout>

</FrameLayout>